# v3-competitor-analysis

./: .gitignore  Dockerfile  README.md  aa.html  app.py  campaigns.csv  config.py  context.txt  data.txt  email_sender.py  file_handler.py  main.py  manager-legacy.py  manager.py  map.html  nike_stores_thailand_map.html  printer.py  pyproject.toml  report-test.md  report.html  st_printer.py  test-price.py  test-rag.py  test.py  test2.py  test_csv.py  test_deep_dive.py  test_search.py  test_toc.py  test_writer.py  user_prompt.py  utils.py
_agents/: chart.py  chart_agent.py  citation.py  planner.py  planner_agent.py  search.py  search_agent.py  writer.py  writer_agent.py
crews/: price_comparison.py  promotion_campaigns.py  traffic_revenue.py
reports/: Levi's_ca_Q4 2024 to Q1 2025_South Korea-20250406_133837.md  Lotteon_ca_October 2024 to March 2025_Republic of Korea-20250407_133337.md  Nike_ca_April 2025 to May 2025_Southeast Asia-20250515_165405.md  Nike_ca_April 2025 to May 2025_Southeast Asia-20250516_094905.md  Nike_ca_January 2025 to May 2025_Southeast Asia-20250516_100028.md  Nike_ca_March 2024 to April 2025_Southeast Asia-20250421_134627.md  Nike_ca_March 2024 to April 2025_Southeast Asia-20250421_140836.md  Nike_ca_March 2025 to May 2025_Southeast Asia-20250515_165033.md  Nike_ca_March 2025 to May 2025_Southeast Asia-20250515_203703.md  Nike_ca_March 2025 to May 2025_Southeast Asia-20250515_205242.md  Nike_ca_October 2024 to March 2025_Southeast Asia-20250406_193939.md  Nike_ca_October 2024 to March 2025_Southeast Asia-20250406_194400.md  Nike_ca_October 2024 to March 2025_Southeast Asia-20250406_194946.md  Nike_ca_October 2024 to March 2025_Southeast Asia-20250406_195111.md  Nike_ca_October 2024 to March 2025_Southeast Asia-20250407_062759.md  (+62 more)
tools/: heat_map_tool.py  (+4 more)
(+10 files in other folders)
